--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ProductGrunt</title>
+  <title>ProductShare</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -10,7 +10,7 @@
 	<div class="nav-container" >
 		<div class="nav-content" >
 		
-		<span class="logo" ><h2><%= link_to "Be My Style", root_path %></h2></span>
+		<span class="logo" ><h2><%= link_to "ProductShare", root_path %></h2></span>
 		<div class="nav-bar-content" >
 			
 			<ul>
