--- a/app/views/links/new.html.erb
+++ b/app/views/links/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Link</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', links_path %>
+<div class="link-new">
+	<h1>Post a New Product</h1>
+	<p>
+		<%= render 'form' %>
+	</p>
+	<p>
+		<%= link_to 'Back', links_path %>
+	</p>
+</div>
