layout-link-new

--- a/app/assets/stylesheets/designs.scss
+++ b/app/assets/stylesheets/designs.scss
@@ -122,10 +122,15 @@
 	margin-bottom: 5px;
 	font-size: 21px;
 }
-.link-new {
-	padding-left: 500px;
-}
 
+.link-new-text {
+	text-align: center;
+}
+.link-new-form {
+	font-size: 18px;
+	padding-top: 10px;
+	padding-left:450px;
+}
 
 .upvote {
 
