--- a/app/views/links/new.html.erb
+++ b/app/views/links/new.html.erb
@@ -1,9 +1,9 @@
 <div class="link-new">
-	<h1>Post a New Product</h1>
-	<p>
+	<div class="link-new-text">
+		<h1>Post a New Product</h1>
+	</div>
+	<div class="link-new-form">
 		<%= render 'form' %>
-	</p>
-	<p>
-		<%= link_to 'Back', links_path %>
-	</p>
+	</div>
+		<!--<%= link_to 'Back', links_path %> -->
 </div>
